--- a/netlify.toml
+++ b/netlify.toml
@@ -4,4 +4,4 @@
     Access-Control-Allow-Origin = "*"
     Access-Control-Allow-Methods = "GET, POST, PUT, DELETE, OPTIONS"
     Access-Control-Allow-Headers = "Content-Type, Authorization"
-    Cache-Control: public, max-age=31536000
+    Cache-Control = "public, max-age=3600"
