--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,5 @@
 [[headers]]
-  for = "/factory/*"
+  for = "/assest/*"
   [headers.values]
     Access-Control-Allow-Origin = "*"
     Access-Control-Allow-Methods = "GET, POST, PUT, DELETE, OPTIONS"
